<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_view">Post view</string>
    <string name="description_post_repost">Post repost</string>
    <string name="description_post_like">Post like</string>

</resources>